fixed img spacing on contact page

--- a/styles/basicstyle.css
+++ b/styles/basicstyle.css
@@ -47,7 +47,7 @@ a{
     justify-content: space-between;
     align-items: center;
 }
-img{
+#mainimg{
     margin-left: 20em;
 }
 
